-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 6.0.1
-
None
-
Windows 7, Qt 5
-
f25300cadf (qt-creator/qt-creator/6.0) f25300cadf (qt-creator/qt-creator/master) f25300cadf (qt-creator/qt-creator/qmlprojectstorage) f25300cadf (qt-creator/qt-creator/qds-3.0)
We have a Windows 7 machine, using Qt Creator 6 (Qt5 variant).
The process launcher crashes occasionally (the reason it still unclear at this point), and when this happens - Qt Creator cannot recover, and every process it tries to launch just hangs for a long period, and the UI becomes unresponsive.
- relates to
-
QTCREATORBUG-27851 Compilation and execution of JOM failed
-
- Closed
-